--- a/infra/addons/frontend/templates/deployment.yaml
+++ b/infra/addons/frontend/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.services.frontend.enabled | default true }}
+# {{- if .Values.global.services.frontend.enabled | default true }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -37,4 +37,4 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-{{- end }}
+# {{- end }}
