--- a/infra/config/dev/services.yaml
+++ b/infra/config/dev/services.yaml
@@ -1,9 +1,4 @@
 services:
-  prometheus-stack:
-    enabled: false
-  loki:
-    enabled: true
-  backend:
-    enabled: true
-  frontend:
-    enabled: true
+  - backend
+  - frontend
+  - loki
