--- a/infra/addons/frontend/templates/servicemonitor.yaml
+++ b/infra/addons/frontend/templates/servicemonitor.yaml
@@ -1,4 +1,4 @@
-# {{- if .Values.metrics.enabled }}
+{{- if .Values.metrics.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -15,4 +15,4 @@ spec:
     - port: http
       path: {{ .Values.metrics.path }}
       interval: 15s
-# {{- end }}
+{{- end }}
