--- a/infra/config/environments.yaml
+++ b/infra/config/environments.yaml
@@ -1,14 +1,8 @@
-# infra/config/environments.yaml
 - env: dev
-  services:
-    - service: backend
-    - service: frontend
-    - service: ingress
-    - service: loki
-
+  service: backend
+- env: dev
+  service: frontend
 - env: prod
-  services:
-    - service: backend
-    - service: frontend
-    - service: ingress
-    - service: loki
+  service: backend
+- env: prod
+  service: frontend
