--- a/infra/config/environments.yaml
+++ b/infra/config/environments.yaml
@@ -1,8 +1,37 @@
 - env: dev
   service: backend
+  group: app
+
 - env: dev
   service: frontend
+  group: app
+
+- env: dev
+  service: loki
+  group: monitoring-system
+
+- env: dev
+  service: ingress
+  group: app
+
+# - env: dev
+  # service: prometheus-stack
+
+
 - env: prod
   service: backend
+  group: app
+
 - env: prod
   service: frontend
+  group: app
+
+- env: prod
+  service: loki
+  group: monitoring-system
+  
+- env: prod
+  service: ingress
+  group: app
+# - env: prod
+ # service: prometheus-stack
