update images based on env.

--- a/infra/config/prod/app/frontend/values.yaml
+++ b/infra/config/prod/app/frontend/values.yaml
@@ -3,8 +3,8 @@
 namespace: prod
 replicaCount: 3
 
-image:
-  tag: "prod-stable"
+# image:
+#   tag: "prod-stable"
 
 # Production resources
 resources:
