--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -1,19 +1,19 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: grafana-ingress-{{ .Values.namespace | default "default" }}
-  labels:
-    app: grafana
-spec:
-  ingressClassName: "nginx"
-  rules:
-    - host: dev.grafana.local
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: prometheus-stack-grafana
-                port:
-                  number: 80
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: grafana-ingress-{{ .Values.namespace | default "default" }}
+#   labels:
+#     app: grafana
+# spec:
+#   ingressClassName: "nginx"
+#   rules:
+#     - host: dev.grafana.local
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: prometheus-stack-grafana
+#                 port:
+#                   number: 80
