--- a/infra/config/dev/app/backend/values.yaml
+++ b/infra/config/dev/app/backend/values.yaml
@@ -19,6 +19,6 @@ database:
   host: mongodb.dev.svc.cluster.local
 
 # Enable persistence for uploads in dev
-persistence:
-  enabled: true
-  size: 2Gi
+# persistence:
+#   enabled: true
+#   size: 2Gi
