--- a/infra/addons/backend/templates/deployment.yaml
+++ b/infra/addons/backend/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -95,3 +96,4 @@ spec:
             - name: uploads-storage
               mountPath: /app/public/uploads
           {{- end }}
+{{- end }}
