--- a/infra/addons/backend/templates/service.yaml
+++ b/infra/addons/backend/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,3 +15,4 @@ spec:
       name: http
   selector:
     {{- include "backend.selectorLabels" . | nindent 4 }}
+{{- end }}
