--- a/infra/config/prod/values.yaml
+++ b/infra/config/prod/values.yaml
@@ -5,7 +5,7 @@ services:
   backend:
     enabled: false
   frontend:
-    enabled: false
+    enabled: true
   ingress:
     enabled: false
   loki:
