--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -8,41 +8,42 @@ grafanaHost: "localhost"
 app:
   serviceMonitors: []
 
-# Configuration for the kube-prometheus-stack subchart
 kube-prometheus-stack:
-  # Prometheus server configuration
-  prometheus:
-    enabled: true
-    prometheusSpec:
-      retention: "15d"  # Keep metrics for 15 days
-      resources:
-        requests:
-          cpu: "100m"
-          memory: "512Mi"
-        limits:
-          cpu: "500m"
-          memory: "1Gi"
-  
-  # Grafana dashboard configuration
-  grafana:
-    enabled: true
-    adminPassword: "admin123"  # Will be overridden per environment
-    service:
-      type: ClusterIP
-      port: 80
-    grafana.ini:
-      server:
-        domain: "localhost"
-        root_url: "http://localhost/"
-  
-  # Disable alertmanager for simplicity
-  alertmanager:
-    enabled: false
-  
-  # Enable node metrics collection
-  # prometheus-node-exporter:
-    # enabled: false
-  
-  # Enable Kubernetes state metrics
-  kube-state-metrics:
-    enabled: true
+# Configuration for the kube-prometheus-stack subchart
+  kube-prometheus-stack: 
+    # Prometheus server configuration
+    prometheus:
+      enabled: true
+      prometheusSpec:
+        retention: "15d"  # Keep metrics for 15 days
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "512Mi"
+          limits:
+            cpu: "500m"
+            memory: "1Gi"
+    
+    # Grafana dashboard configuration
+    grafana:
+      enabled: true
+      adminPassword: "admin123"  # Will be overridden per environment
+      service:
+        type: ClusterIP
+        port: 80
+      grafana.ini:
+        server:
+          domain: "localhost"
+          root_url: "http://localhost/"
+    
+    # Disable alertmanager for simplicity
+    alertmanager:
+      enabled: false
+    
+    # Enable node metrics collection
+    # prometheus-node-exporter:
+      # enabled: false
+    
+    # Enable Kubernetes state metrics
+    kube-state-metrics:
+      enabled: true
