Update prometheus-stack-prod values

--- a/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
@@ -1,39 +1,41 @@
 namespaceOverride: prod
 
-prometheus-node-exporter:
-  hostPort: false
-  service:
-    port: 9200
-  serviceMonitor:
-    enabled: true
-    namespace: prod
 
-prometheus:
-  prometheusSpec:
-    serviceMonitorSelector:
-      matchLabels:
-        release: prometheus-stack-prod
-    retention: "30d"
+kube-prometheus-stack:
+  prometheus-node-exporter:
+    hostPort: false
+    service:
+      port: 9200
+    serviceMonitor:
+      enabled: true
+      namespace: prod
+
+  prometheus:
+    prometheusSpec:
+      serviceMonitorSelector:
+        matchLabels:
+          release: prometheus-stack-prod
+      retention: "30d"
+      resources:
+        requests:
+          cpu: "500m"
+          memory: "2Gi"
+        limits:
+          cpu: "2000m"
+          memory: "4Gi"
+
+  grafana:
+    enabled: true
+    ingress:
+      enabled: true
+      hosts:
+        - prod.grafana.local
+      path: /
+      pathType: Prefix
     resources:
       requests:
-        cpu: "500m"
-        memory: "2Gi"
+        cpu: "200m"
+        memory: "256Mi"
       limits:
-        cpu: "2000m"
-        memory: "4Gi"
-
-grafana:
-  enabled: true
-  ingress:
-    enabled: true
-    hosts:
-      - prod.grafana.local
-    path: /
-    pathType: Prefix
-  resources:
-    requests:
-      cpu: "200m"
-      memory: "256Mi"
-    limits:
-      cpu: "500m"
-      memory: "512Mi"
+        cpu: "500m"
+        memory: "512Mi"
