--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -38,19 +38,18 @@ kube-prometheus-stack:
           cpu: "100m"
           memory: "512Mi"
         limits:
-          cpu: "500m"
           memory: "1Gi"
-
 
   grafana:
     enabled: true
     ingress:
       enabled: true
       ingressClassName: nginx
+      annotations:
+        kubernetes.io/ingress.class: nginx
       hosts:
         - dev.grafana.local
-      paths:
-        - /
+      path: /
       pathType: Prefix
       # tls:
       #   - hosts:
