Update ingressClassName for env. vise

--- a/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
@@ -28,6 +28,7 @@ kube-prometheus-stack:
     enabled: true
     ingress:
       enabled: true
+      ingressClassName: nginx
       hosts:
         - prod.grafana.local
       path: /
