--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -44,6 +44,7 @@ kube-prometheus-stack:
     enabled: true
     ingress:
       enabled: true
+      ingressClassName: nginx
       hosts:
         - dev.grafana.local
       # tls:
