disable configuration-snippet annotation ingress-prod

--- a/infra/config/prod/app/ingress/values.yaml
+++ b/infra/config/prod/app/ingress/values.yaml
@@ -26,13 +26,13 @@ services:
 annotations:
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-  nginx.ingress.kubernetes.io/proxy-body-size: "50m"
   nginx.ingress.kubernetes.io/limit-rps: "50"
+  nginx.ingress.kubernetes.io/proxy-body-size: "50m"
   nginx.ingress.kubernetes.io/limit-connections: "10"
   nginx.ingress.kubernetes.io/rate-limit: "100"
   nginx.ingress.kubernetes.io/rate-limit-window: "1m"
-  nginx.ingress.kubernetes.io/configuration-snippet: |
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+  # nginx.ingress.kubernetes.io/configuration-snippet: |
+  #   add_header X-Frame-Options "SAMEORIGIN" always;
+  #   add_header X-Content-Type-Options "nosniff" always;
+  #   add_header X-XSS-Protection "1; mode=block" always;
+  #   add_header Referrer-Policy "strict-origin-when-cross-origin" always;
