update grafana-ingress for dev and ingress for prod

--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -47,6 +47,14 @@ kube-prometheus-stack:
       ingressClassName: nginx
       hosts:
         - dev.grafana.local
+      path: /
+      pathType: Prefix
+    resources:
+      requests:
+        cpu: "100m"
+        memory: "250Mi"
+      limits:
+        memory: "512Mi"
       # tls:
       #   - hosts:
       #       - dev.grafana.local
