Added ingressClassName: "nginx" to both prod and dev ingress configurations Added Grafana ingress configuration to prod values with SSL redirect disabled

--- a/infra/config/prod/app/ingress/values.yaml
+++ b/infra/config/prod/app/ingress/values.yaml
@@ -26,6 +26,7 @@ services:
 
 annotations:
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
+  nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   nginx.ingress.kubernetes.io/limit-rps: "50"
   nginx.ingress.kubernetes.io/proxy-body-size: "50m"
   nginx.ingress.kubernetes.io/limit-connections: "10"
