--- a/infra/config/dev/values.yaml
+++ b/infra/config/dev/values.yaml
@@ -37,4 +37,25 @@ database:
 # Dev ingress domain override
 # domain: "dev.sharkapp.local"
 
+# Grafana configuration for dev
+kube-prometheus-stack:
+  grafana:
+    enabled: true
+    ingress:
+      enabled: true
+      ingressClassName: "nginx"
+      hosts:
+        - dev.grafana.local
+      path: /
+      pathType: Prefix
+      annotations:
+        nginx.ingress.kubernetes.io/ssl-redirect: "false"
+        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    resources:
+      requests:
+        cpu: "100m"
+        memory: "128Mi"
+      limits:
+        cpu: "200m"
+        memory: "256Mi"
 
