--- a/infra/addons/loki/Chart.yaml
+++ b/infra/addons/loki/Chart.yaml
@@ -1,6 +1,12 @@
 apiVersion: v2
+appVersion: "2.9.0"
+version: 0.1.0
 name: loki
 description: Loki log aggregation
-type: application
-version: 0.1.0
-appVersion: "2.9.0"
+dependencies:
+    - name: loki
+      version: 6.7.4
+      repository: https://grafana.github.io/helm-charts
+    - name: alloy
+      version: 1.2.0
+      repository: https://grafana.github.io/helm-charts
