update loki config

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -1,41 +1,51 @@
 namespace: dev
 
 loki:
-  enabled: true
-  config:
-    commonConfig:
-      path_prefix: /tmp/loki
-    storage_config:
-      boltdb_shipper:
-        active_index_directory: /tmp/loki/index
-        cache_location: /tmp/loki/boltdb-cache
-        shared_store: filesystem
-      filesystem:
-        directory: /tmp/loki/chunks
-    schema_config:
-      configs:
-        - from: "2022-01-01"
-          store: boltdb-shipper
-          object_store: filesystem
-          schema: v11
-          index:
-            prefix: index_
-            period: 24h
+  storage:
+    bucketNames:
+      chunks: loki-chunks
+      ruler: loki-ruler
+      admin: loki-admin
+    type: filesystem
+    filesystem:
+      directory: /data/loki
 
-  persistence:
-    enabled: false
+# loki:
+#   enabled: true
+#   config:
+#     commonConfig:
+#       path_prefix: /tmp/loki
+#     storage_config:
+#       boltdb_shipper:
+#         active_index_directory: /tmp/loki/index
+#         cache_location: /tmp/loki/boltdb-cache
+#         shared_store: filesystem
+#       filesystem:
+#         directory: /tmp/loki/chunks
+#     schema_config:
+#       configs:
+#         - from: "2022-01-01"
+#           store: boltdb-shipper
+#           object_store: filesystem
+#           schema: v11
+#           index:
+#             prefix: index_
+#             period: 24h
 
-  service:
-    type: ClusterIP
-    port: 3100
+#   persistence:
+#     enabled: false
 
-  resources:
-    limits:
-      cpu: 200m
-      memory: 256Mi
-    requests:
-      cpu: 100m
-      memory: 128Mi
+#   service:
+#     type: ClusterIP
+#     port: 3100
+
+#   resources:
+#     limits:
+#       cpu: 200m
+#       memory: 256Mi
+#     requests:
+#       cpu: 100m
+#       memory: 128Mi
 
 promtail:
   enabled: false
